chapter5/canary-deployments/wines-canary-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: wines-canary-route
  namespace: wines
spec:
  to:
    kind: Service
    name: wines-a
    weight: 60
  alternateBackends:
    - kind: Service
      name: wines-b
      weight: 30
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
